<resources>
    <string name="app_name">HeyYo</string>
    <string name="Verify_Phone">Verify your phone number</string>
    <string name="Verify_Phone_desc">Chat app will send a message to verify your phone number.</string>
    <string name="Enter_No">Please enter your number</string>
    <string name="Continue_button">Continue</string>
    <string name="Verify_No">Verify +91 8796512345</string>
    <string name="OTPdesc">Enter the OTP to verify your number.</string>
    <string name="otpBox">Enter the OTP</string>
    <string name="verifyBtn">Verify</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="prof">Profile Info</string>
    <string name="textDescProf">Please enter your name and profile image.</string>
    <string name="namebox">Name</string>
    <string name="setupProfile">Setup profile</string>
    <string name="chats">CHATS</string>
    <string name="calls">CALLS</string>
    <string name="status">STATUS</string>
    <string name="search">search</string>
    <string name="groups">Groups</string>
    <string name="invite">Invite</string>
    <string name="settings">Settings</string>
    <string name="username">username</string>
    <string name="tap_to_chat">Tap to chat</string>
    <string name="_06_00_pm">06:00 PM</string>
    <string name="todo">TODO</string>
    <string name="message">Message</string>
    <string name="attachments">Attachments</string>
    <string name="camera">Camera</string>
    <string name="send">send</string>
    <string name="textview">TextView</string>
    <string name="feeling">feeling</string>
    <string name="textview_sent">TextView</string>
    <string name="feeling_sent">feeling</string>
    <string name="status_picture">Status picture</string>
    <string name="picture_sent">picture sent</string>
    <string name="recieved_image">received image</string>
    <string name="online">Online</string>
    <string name="profile_picture">profile picture</string>
    <string name="video_call">Video Call</string>
    <string name="audio_call">Audio Call</string>
    <string name="profile">Profile</string>
    <string name="block">Block</string>
</resources>