<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setupProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".setupProfile">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/Verify_Phone"
        android:src="@drawable/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/texxtViewProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/prof"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/profilePic"
        app:layout_constraintStart_toStartOf="@+id/profilePic"
        app:layout_constraintTop_toBottomOf="@+id/profilePic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textDescProf"
        android:textColor="@color/textColor"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/profilePic"
        app:layout_constraintStart_toStartOf="@+id/profilePic"
        app:layout_constraintTop_toBottomOf="@+id/texxtViewProfile" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/backgroundColor"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/nameBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/textbox_outline"
                android:ems="10"
                android:hint="@string/namebox"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="8dp" />

            <Button
                android:id="@+id/setupProfBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#4CAF50"
                android:padding="10dp"
                android:text="@string/setupProfile"
                android:textColor="#FFFFFF"
                app:cornerRadius="10dp"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>