<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:hapticFeedbackEnabled="false"
    tools:context=".Activities.ChatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backButtonArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/profile_picture"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/white"
                tools:ignore="InefficientWeight,ImageContrastCheck" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/avatar"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/online"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    tools:ignore="InefficientWeight" />
            </LinearLayout>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="12dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendBtn"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/messaageBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/message"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/attachmentBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/attachmentBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/attachments"
                app:layout_constraintBottom_toBottomOf="@+id/messaageBox"
                app:layout_constraintEnd_toStartOf="@+id/cameraBtn"
                app:layout_constraintTop_toTopOf="@+id/messaageBox"
                app:srcCompat="@drawable/ic_attachment"
                app:tint="#878787" />

            <ImageView
                android:id="@+id/cameraBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/camera"
                app:layout_constraintBottom_toBottomOf="@+id/attachmentBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/attachmentBtn"
                app:srcCompat="@drawable/ic_camera"
                app:tint="#838383" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/circle_green"
        android:contentDescription="@string/send"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView3"
        app:srcCompat="@drawable/ic_send"
        app:tint="#FFFFFF" />
</androidx.constraintlayout.widget.ConstraintLayout>