<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/phoneNoActivity"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".PhoneNumber">


    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/Verify_Phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mobile_auth" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Verify_Phone"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/profilePic"
        app:layout_constraintStart_toStartOf="@+id/profilePic"
        app:layout_constraintTop_toBottomOf="@+id/profilePic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Verify_Phone_desc"
        android:textSize="12sp"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="@+id/profilePic"
        app:layout_constraintStart_toStartOf="@+id/profilePic"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/backgroundColor"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/phoneBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/textbox_outline"
                android:ems="10"
                android:hint="@string/Enter_No"
                android:inputType="phone"
                android:padding="8dp"
                android:textColor="@color/textColor"
                android:textColorHint="#616161"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/continueBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#4CAF50"
                android:padding="10dp"
                android:text="@string/Continue_button"
                android:textColor="#FFFFFF"
                app:cornerRadius="10dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>